--- a/petitparser-core/pom.xml
+++ b/petitparser-core/pom.xml
@@ -15,4 +15,16 @@
     <name>PetitParser Core</name>
     <description>PetitParser library</description>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.26</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.12.0</version>
+        </dependency>
+    </dependencies>
 </project>
